Fixes dimensions and measures inversion in createAllotropeDataFromChFile